###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name="srp")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "nlohmann_json", version = "3.12.0", repo_name = "com_json")
bazel_dep(name = "google_benchmark", version = "1.9.2", repo_name = "com_google_benchmark")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "rules_python", version = "1.4.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

srp_mavlink_version = "0.3"
http_archive(
    name = "srp_mavlink",
    strip_prefix = "simba_mavlink-"+srp_mavlink_version,
    urls = ["https://github.com/Simba-Avionic/simba_mavlink/archive/refs/tags/"+srp_mavlink_version+".zip"],
    type = "zip",
)



python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(
    # Use python.defaults if you have defined multiple toolchain versions.
    python_version = "3.9",
    python_version_env = "BAZEL_PYTHON_VERSION",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.9",
)
